<resources>
    <string name="app_name">Exam Registration</string>
    <string name="splash">Splash</string>
    <string name="exam_registration">Exam Registration</string>
    <string name="continue_with">Continue with</string>
    <string name="google">Google</string>
    <string name="e_mail">E-MAIL</string>
    <string name="login_logo">login_logo</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_to_continue">Sign Up To Continue</string>
    <string name="welcome_user">Welcome User</string>
    <string name="enroll_for_an_exam">ENROLL FOR AN EXAM</string>
    <string name="view_application_status">VIEW APPLICATION STATUS</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="available_seats">Available Seats : 963</string>
    <string name="last_date">Last date : 13.03.2021</string>
    <string name="some_private_exam_2021">SOME PRIVATE EXAM 2021</string>
    <string name="form_fees">Form fees :</string>
    <string name="general">General</string>
    <string name="obc">OBC</string>
    <string name="sc_st">SC / ST</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="test_mode">Test mode :</string>
    <string name="online">ONLINE</string>
    <string name="_750">₹ 750</string>
    <string name="_150">₹ 150</string>
    <string name="_80">₹  80</string>
    <string name="logout">LOGOUT</string>
    <string name="recover_password">RECOVER PASSWORD</string>
    <string name="send_recovery_mail">SEND RECOVERY MAIL</string>
    <string name="registration_form">Registration Form</string>
    <string name="title_activity_form">formActivity</string>
    <string name="tab_text_1">Registration</string>
    <string name="tab_text_2">Upload Documents</string>
    <string name="personal_details">Personal Details</string>
    <string name="back_button">Back Button</string>
    <string name="information_bulletin">information bulletin</string>
    <string name="gen_fee">750₹</string>
    <string name="obc_fee">150₹</string>
    <string name="sc_fee">80₹</string>
    <string name="st_fee">80₹</string>
    <string name="enrollment_done">ENROLLED</string>
    <string name="candidate_image">Candidate Image</string>
    <string name="admin_login">Admin Login</string>

</resources>