<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    tools:context=".SignInActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/signInImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:src="@drawable/ic_og_logo"
        android:contentDescription="@string/login_logo"
        android:transitionName="splash_logo_transition"
        />

    <TextView
        android:id="@+id/sign_in_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInImage"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/purple_500"
        android:textSize="32sp"
        android:transitionName="splash_text_transition"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_below="@+id/sign_in_to_continue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_signin"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingVertical="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_500"
        android:layout_below="@+id/login_password"
        android:layout_alignEnd="@id/login_password"
        android:clickable="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/forgot_password"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/yantramanav"
        android:text="@string/login"
        app:cornerRadius="8dp"
        android:textSize="20sp"
        app:backgroundTint="#EDD4FA"
        android:textColor="@color/purple_700"
        android:transitionName="email_button_transition"/>

    <TextView
        android:id="@+id/new_user_signup"
        android:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/purple_500"
        android:paddingVertical="8dp"
        android:text="@string/new_user_sign_up"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:clickable="true" />

</RelativeLayout>
</ScrollView>