<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".forgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <ImageView
        android:id="@+id/recoverPasswordImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="104dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/forgot_logo"
        android:contentDescription="@string/login_logo"
        android:transitionName="splash_logo_transition"
        />

    <TextView
        android:id="@+id/recoverPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recoverPasswordImage"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/recover_password"
        android:textColor="@color/purple_500"
        android:textSize="32sp"
        android:transitionName="splash_text_transition"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="35dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_below="@+id/recoverPasswordText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fp_Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/fp_email"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/yantramanav"
            android:text="@string/send_recovery_mail"
            app:cornerRadius="8dp"
            android:textSize="20sp"
            android:transitionName="email_button_transition"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/fp_Button"
            />

    </RelativeLayout>

</ScrollView>